docs/api/qiskit/0.33/qiskit.transpiler.passes.ContainsInstruction.mdx
---
title: ContainsInstruction (v0.33)
description: API reference for qiskit.transpiler.passes.ContainsInstruction in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ContainsInstruction
---

# ContainsInstruction

<Class id="qiskit.transpiler.passes.ContainsInstruction" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/transpiler/passes/utils/contains_instruction.py" signature="ContainsInstruction(*args, **kwargs)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.AnalysisPass`

  An analysis pass to detect if the DAG contains a specific instruction.

  This pass takes in a single instruction name for example `'delay'` and will set the property set `contains_delay` to `True` if the DAG contains that instruction and `False` if it does not.

  ContainsInstruction initializer.

  **Parameters**

  **instruction\_name** (*str*) – The instruction to check if it’s in the DAG. The output in the property set is set to `contains_` prefixed on the value for this parameter.

  ## Methods

  <span id="qiskit-transpiler-passes-containsinstruction-name" />

  ### name

  <Function id="qiskit.transpiler.passes.ContainsInstruction.name" signature="ContainsInstruction.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-containsinstruction-run" />

  ### run

  <Function id="qiskit.transpiler.passes.ContainsInstruction.run" signature="ContainsInstruction.run(dag)">
    Run the ContainsInstruction pass on dag.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.ContainsInstruction.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.ContainsInstruction.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

